<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/localGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/bluebutton"
        android:text="@string/localGame" />

    <Button
        android:id="@+id/foreignGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/localGame"
        android:layout_marginTop="80dp"
        android:background="@drawable/yellowbutton"
        android:text="@string/foreignGame" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/foreignGame"
        android:layout_marginTop="80dp"
        android:background="@drawable/redbg"
        android:text="@string/back" />

</RelativeLayout>